# mediaserver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: config.rs  directory.rs  main.rs
src/config/: error.rs  fancy_rendering.rs  fancy_rendering_emoji.rs  file_listing.rs  mod.rs  namespace_def.rs  random_string_generator.rs  storage.rs  web_server.rs
src/render/: mod.rs  template.rs
src/routes/: index.rs  mod.rs  upload.rs
templates/: directory_view.html  individual_listing.html
