[package]
name = "mediaserver"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
bytesize = "2.0.1"
chrono = "0.4.41"
env_logger = "0.11.8"
futures = "0.3"
log = "0.4"
num-format = "0.4.4"
percent-encoding = "2.3.1"
phf = { version = "0.11", features = ["macros"] }
rand = "0.9.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "2.0.12"
toml = "0.8.22"
url = "1"
url_serde = "0.2"
v_htmlescape = "0.15.8"
