[package]
name = "mediaserver"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4"
askama = "0.14.0"
bytesize = "2.0.1"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4"
minify-html = "0.16.4"
num-format = "0.4.4"
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
toml = "0.8.22"
url = "1"
url_serde = "0.2"
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
